--- a/about.html
+++ b/about.html
@@ -26,20 +26,135 @@
     </div>
   </div>
   <!--End of loader-->
-    <!--Navigation Bar Code Starts-->
-    <header>
-      <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
-      <nav>
-          <div id="menu-icon-1" class="menu-icon-1">&#9776;</div>
-          <ul id="menu-items-1" class="menu-items-1">
-              <li>
-                <a href="index.html">Home</a>
-              </li>
+  <!--Navigation Bar Code Starts-->
+  <header>
+    <div class="logo">
+      <a href="index.html">Mini 
+        <span>Minds</span>
+      </a>
+    </div>
+    <nav>
+        <div id="menu-icon-1" class="menu-icon-1">&#9776;</div>
+        <ul id="menu-items-1" class="menu-items-1">
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="stories.html">Stories</a>
+            </li>
+            <li>
+              <a href="courses.html">Games</a>
+            </li>
+            <li>
+              <a href="courses.html">Courses</a>
+            </li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+  </header>
+  <!--Navigation Bar Code ends-->
+  <!--About section Starts-->
+  <div class="about-us">
+    <h2 class="heading">About Us</h2>
+  </div>
+  <div id="about" class="about-2">
+      <div class="space">
+        <p>We're on a mission to transform learning from a chore into an exhilarating adventure. At Mini Minds, we believe every child is a budding genius, bursting with curiosity and a thirst for knowledge. That's why we've created a vibrant digital playground where learning is disguised as fun. Imagine a world where numbers dance, words sing, and creativity soars! Our interactive games, captivating activities, and imaginative stories are crafted to ignite young minds and foster a lifelong love of learning. We're talking puzzles that perplex and delight, challenges that spark ingenuity, and tales that transport little explorers to far-off lands. Make education exciting, engaging, and effective for kids aged 5 to 12. Let's turn ordinary study time into extraordinary adventures together!</p>
+        <!--Back to top button-->
+        <div class="back-to-top">
+          <a href="#">
+            <i class="fa-solid fa-circle-arrow-up"></i>
+          </a>
+        </div><br>
+        <!--Back to top button-->
+        <strong class="fade-in-left-target">Why Trust Mini Minds?</strong>
+        <ul>
+          <li class="fade-in-left-target">
+            <b>
+              <i>Scientifically Backed Fun:</i>
+            </b>
+            <p>Studies show that children learn best when they are engaged and enjoying themselves. Our activities are designed to be both fun and educational, helping kids retain information better. </p>
+          </li><br>
+          <li class="fade-in-left-target">
+            <b>
+              <i>Scientifically Backed Fun:</i>
+            </b>
+            <p>Studies show that children learn best when they are engaged and enjoying themselves. Our activities are designed to be both fun and educational, helping kids retain information better. </p>
+          </li><br>
+          <li class="fade-in-left-target">
+            <b>
+              <i>Positive Learning Environment:</i>
+            </b>
+            <p>Creating a positive association with learning can foster a lifelong love of knowledge. Mini Minds is all about making education enjoyable and rewarding.</p>
+          </li>
+        </ul>
+        <br>
+        <br>
+        <a class="button-about fade-in-up-target" href="courses.html" target="_blank">Explore Courses</a>
+    </div>
+  </div>
+  <!--About section Ends-->
+<!--Contact Us section starts-->
+<footer>
+  <!--Contact section intro div-->
+  <div class="footer-container">
+    <div class="footer-brand contact">
+        <a>@Mini<span>Minds</span></a>
+        <p>Reach us out from contact section for any doubts</p>
+    </div>
+    <div class="footer-section" id="contact">
+        <h2 class="heading">Contacts</h2>
+        <div>
+            <p>
+              <strong>Address:</strong>
+              <br>AP, India
+            </p>
+            <p>
+              <strong>Contact:</strong>
+              <br>0123456789
+            </p>
+        </div>
+    </div>
+    <!--Contact section intro div-->
+    <!--Social links div starts-->
+    <div class=" footer-section social-links-div">
+      <h2 class="heading">Social</h2>
+      <ul class="quick-links">
+          <li>
+            <a class="icon" href="https://www.youtube.com/" target="_blank">
+              <i class="fab fa-youtube"></i> YouTube
+            </a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.instagram.com/" target="_blank">
+              <i class="fab fa-instagram"></i> Instagram
+            </a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.linkedin.com/" target="_blank">
+              <i class="fab fa-linkedin"></i> LinkedIn
+            </a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.facebook.com/" target="_blank">
+              <i class="fab fa-facebook"></i> FaceBook
+            </a>
+          </li>
+      </ul>
+    </div>
+    <!--Social links div ends-->
+    <!--Quicks links div starts-->
+    <div class="links-div">
+      <div class="footer-section quick-links-div">
+          <h2 class="heading">Quick Links</h2>
+          <ul class="quick-links">
               <li>
                 <a href="stories.html">Stories</a>
               </li>
               <li>
-                <a href="courses.html">Games</a>
+                <a href="about.html">About Us</a>
               </li>
               <li>
                 <a href="courses.html">Courses</a>
@@ -48,74 +163,13 @@
                 <a href="contact.html">Contact</a>
               </li>
           </ul>
-      </nav>
-  </header>
-  <!--Navigation Bar Code ends-->
-    <!--About section Starts-->
-    <div class="about-us">
-      <h2 class="heading">About Us</h2>
-    </div>
-    <div id="about" class="about-2">
-        <div class="space">
-          <p>We're on a mission to transform learning from a chore into an exhilarating adventure. At Mini Minds, we believe every child is a budding genius, bursting with curiosity and a thirst for knowledge. That's why we've created a vibrant digital playground where learning is disguised as fun. Imagine a world where numbers dance, words sing, and creativity soars! Our interactive games, captivating activities, and imaginative stories are crafted to ignite young minds and foster a lifelong love of learning. We're talking puzzles that perplex and delight, challenges that spark ingenuity, and tales that transport little explorers to far-off lands. Make education exciting, engaging, and effective for kids aged 5 to 12. Let's turn ordinary study time into extraordinary adventures together!</p>
-          <div class="back-to-top"><a href="#"><i class="fa-solid fa-circle-arrow-up"></i></a></div><br>
-          <strong class="fade-in-left-target">Why Trust Mini Minds?</strong>
-          <ul>
-            <li class="fade-in-left-target">
-              <b><i>Scientifically Backed Fun:</i></b>
-              <p>Studies show that children learn best when they are engaged and enjoying themselves. Our activities are designed to be both fun and educational, helping kids retain information better. </p>
-            </li><br>
-            <li class="fade-in-left-target">
-              <b>Scientifically Backed Fun:</b>
-              <p>Studies show that children learn best when they are engaged and enjoying themselves. Our activities are designed to be both fun and educational, helping kids retain information better. </p>
-            </li><br>
-            <li class="fade-in-left-target">
-              <b><i>Positive Learning Environment:</i></b>
-              <p>Creating a positive association with learning can foster a lifelong love of knowledge. Mini Minds is all about making education enjoyable and rewarding.</p>
-            </li>
-          </ul><br><br>
-          <a class="button-about fade-in-up-target" href="courses.html" target="_blank">Explore Courses</a>
       </div>
     </div>
-    <!--About section Ends-->
-    <!--Contact Us section starts-->
-    <footer>
-      <div class="footer-container">
-          <div class="footer-brand contact">
-              <a>Mini <span>Minds</span></a>
-              <p>Reach us out from contact section for any doubts</p>
-          </div>
-          <div class="footer-section" id="contact">
-              <h2 class="heading">Contacts</h2>
-              <div>
-                  <p><strong>Address:</strong><br>AP, India</p>
-                  <p><strong>Contact:</strong><br>0123456789</p>
-              </div>
-          </div>
-          <div class=" footer-section social-links-div">
-            <h2 class="heading">Social</h2>
-            <ul class="quick-links">
-                <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
-                <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-                <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> FaceBook</a></li>
-            </ul>
-        </div>
-        <div class="links-div">
-          <div class="footer-section quick-links-div">
-              <h2 class="heading">Quick Links</h2>
-              <ul class="quick-links">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="courses.html">Courses</a></li>
-                  <li><a href="stories.html">Stories</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-              </ul>
-          </div>
-        </div>
-      </div>
-  </footer>
-  <!--Contact Us section Ends-->
-<!--link to java script-->
+    <!--Quicks links div ends-->
+  </div>
+</footer>
+<!--Contact Us section Ends-->
+<!--linking javascript-->
 <script src="script.js"></script>
-<!--link to java script-->
+<!--linking javascript-->
 </body>
