--- a/courses.html
+++ b/courses.html
@@ -26,113 +26,170 @@
     </div>
   </div>
   <!--End of loader animation-->
-    <!--Navigation Bar Code Starts-->
-    <header>
-      <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
-      <nav>
-          <div id="menu-icon" class="menu-icon-1">&#9776;</div>
-          <ul id="menu-items" class="menu-items-1">
+  <!--Navigation Bar Code Starts-->
+  <header>
+    <div class="logo">
+      <a href="index.html">Mini <span>Minds</span></a>
+    </div>
+    <nav>
+        <div id="menu-icon" class="menu-icon-1">&#9776;</div>
+        <ul id="menu-items" class="menu-items-1">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
             <li>
-              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
             </li>
-              <li>
-                <a href="about.html">About</a>
-              </li>
-              <li>
-                <a href="stories.html">Stories</a>
-              </li>
-              <li>
-                <a href="courses.html">Games</a>
-              </li>
-              <li>
-                <a href="contact.html">Contact</a>
-              </li>
-          </ul>
-      </nav>
+            <li>
+              <a href="stories.html">Stories</a>
+            </li>
+            <li>
+              <a href="courses.html">Games</a>
+            </li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
   </header>
   <!--Navigation Bar Code ends-->
-    <!--Courses section Starts-->
-    <div class="our-courses">
-      <h2 class="heading">Our Courses</h2>
-    </div>
+  <!--Courses section Starts-->
+  <div class="our-courses">
+    <h2 class="heading">
+      Our Courses
+    </h2>
+  </div>
     <div id="courses" class="courses space story-list">
-        <div class="space">
-          <p>Unleash your child's potential with our fun and educational games! Designed to make learning an adventure, our platform offers a captivating blend of numbers, letters, and science. Watch as your child's curiosity is ignited and their confidence grows with every challenge conquered. Our games are more than just entertainment; they're a pathway to a brighter future.</p><br>
-          <ul><div class="back-to-top"><a href="#"><i class="fa-solid fa-circle-arrow-up"></i></a></div>
-            <li class="fade-in-up-target">
-              <strong>Math Magician:</strong>
-              <p>Master addition, subtraction, multiplication, and division through fun puzzles and challenges.</p>
-            </li>
-            <li class="fade-in-up-target">
-              <strong>Alphabet Adventure:</strong>
-              <p>Embark on a journey to discover the magic of letters, words, and reading.</p>
-            </li>
-            <li class="fade-in-up-target">
-              <strong>Coding Corner:</strong>
-              <p>Learn the basics of coding while creating fun animations and games.</p>
-            </li>
-            <li class="fade-in-up-target">
-              <strong>Science Safari: </strong>
-              <p>Explore the wonders of the world with interactive experiments and quizzes.</p>
-            </li>
-            <li class="fade-in-up-target">
-              <strong>Logic Labyrinth:</strong>
-              <p>Sharpen problem-solving skills with engaging puzzles and brain teasers.</p>
-            </li>
-          </ul>
-        </div>
+      <div class="space">
+        <p>Unleash your child's potential with our fun and educational games! Designed to make learning an adventure, our platform offers a captivating blend of numbers, letters, and science. Watch as your child's curiosity is ignited and their confidence grows with every challenge conquered. Our games are more than just entertainment; they're a pathway to a brighter future.</p><br>
+        <ul>
+          <div class="back-to-top">
+            <a href="#">
+              <i class="fa-solid fa-circle-arrow-up"></i>
+            </a>
+          </div>
+          <li class="fade-in-up-target">
+            <strong>Math Magician:</strong>
+            <p>Master addition, subtraction, multiplication, and division through fun puzzles and challenges.</p>
+          </li>
+          <li class="fade-in-up-target">
+            <strong>Alphabet Adventure:</strong>
+            <p>Embark on a journey to discover the magic of letters, words, and reading.</p>
+          </li>
+          <li class="fade-in-up-target">
+            <strong>Coding Corner:</strong>
+            <p>Learn the basics of coding while creating fun animations and games.</p>
+          </li>
+          <li class="fade-in-up-target">
+            <strong>Science Safari: </strong>
+            <p>Explore the wonders of the world with interactive experiments and quizzes.</p>
+          </li>
+          <li class="fade-in-up-target">
+            <strong>Logic Labyrinth:</strong>
+            <p>Sharpen problem-solving skills with engaging puzzles and brain teasers.</p>
+          </li>
+        </ul>
+      </div>
     </div>
     <!--Courses section Ends-->
-     <!--Course list section Starts-->
-     <div id="course-list" class="course-list">
+    <!--Course list section Starts-->
+    <div id="course-list" class="course-list">
       <h2 class="heading">Our Courses</h2><br>
       <div class="div-course">
-      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/English.png" alt=""></div>
-      <div class="box fade-in-right-target"><img src="images/Coding.png" alt=""></div>
-      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Maths.png" alt=""></div>
-      <div class="box fade-in-right-target"><img src="images/Laptop.png" alt=""></div>
-      <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/Pencil.png" alt=""></div>
-    </div>
-    </div>
-    <!--Course list section Ends-->
- <!--Contact Us section starts-->
- <footer>
-  <div class="footer-container">
+        <div class="box fade-in-up-target">
+          <img class="fade-in-up-target" src="images/English.png" alt="">
+        </div>
+        <div class="box fade-in-right-target">
+          <img src="images/Coding.png" alt="">
+        </div>
+        <div class="box fade-in-up-target">
+          <img class="fade-in-up-target" src="images/Maths.png" alt="">
+        </div>
+        <div class="box fade-in-right-target">
+          <img src="images/Laptop.png" alt="">
+        </div>
+        <div class="box fade-in-up-target">
+          <img class="fade-in-up-target" src="images/Pencil.png" alt="">
+        </div>
+     </div>
+  </div>
+  <!--Course list section Ends-->
+  <!--Contact Us section starts-->
+  <footer>
+    <!--Contact section intro div-->
+    <div class="footer-container">
       <div class="footer-brand contact">
-          <a>Mini <span>Minds</span></a>
+          <a>@Mini
+            <span>Minds</span>
+          </a>
           <p>Reach us out from contact section for any doubts</p>
       </div>
       <div class="footer-section" id="contact">
           <h2 class="heading">Contacts</h2>
           <div>
-              <p><strong>Address:</strong><br>AP, India</p>
-              <p><strong>Contact:</strong><br>0123456789</p>
+              <p>
+                <strong>Address:</strong>
+                <br>AP, India
+              </p>
+              <p>
+                <strong>Contact:</strong>
+                <br>0123456789
+              </p>
           </div>
       </div>
+      <!--Contact section intro div-->
+      <!--Social links div starts-->
       <div class=" footer-section social-links-div">
         <h2 class="heading">Social</h2>
         <ul class="quick-links">
-            <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
-            <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-            <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-            <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> FaceBook</a></li>
+            <li>
+              <a class="icon" href="https://www.youtube.com/" target="_blank">
+                <i class="fab fa-youtube"></i> YouTube
+              </a>
+            </li>
+            <li>
+              <a class="icon" href="https://www.instagram.com/" target="_blank">
+                <i class="fab fa-instagram"></i> Instagram
+              </a>
+            </li>
+            <li>
+              <a class="icon" href="https://www.linkedin.com/" target="_blank">
+                <i class="fab fa-linkedin"></i> LinkedIn
+              </a>
+            </li>
+            <li>
+              <a class="icon" href="https://www.facebook.com/" target="_blank">
+                <i class="fab fa-facebook"></i> FaceBook
+              </a>
+            </li>
         </ul>
-    </div>
-    <div class="links-div">
-      <div class="footer-section quick-links-div">
-          <h2 class="heading">Quick Links</h2>
-          <ul class="quick-links">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="stories.html">Stories</a></li>
-              <li><a href="contact.html">Contact</a></li>
-          </ul>
       </div>
+      <!--Social links div ends-->
+      <!--Quicks links div starts-->
+      <div class="links-div">
+        <div class="footer-section quick-links-div">
+            <h2 class="heading">Quick Links</h2>
+            <ul class="quick-links">
+                <li>
+                  <a href="stories.html">Stories</a>
+                </li>
+                <li>
+                  <a href="about.html">About Us</a>
+                </li>
+                <li>
+                  <a href="courses.html">Courses</a>
+                </li>
+                <li>
+                  <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+      </div>
+      <!--Quicks links div ends-->
     </div>
-  </div>
-</footer>
-<!--Contact Us section Ends-->
-<!--link to java script-->
+  </footer>
+  <!--Contact Us section Ends-->
+<!--linking javascript-->
 <script src="script.js"></script>
-<!--link to java script-->
+<!--linking javascript-->
 </body>
