--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,15 @@
   <!--End of loader animation-->
     <!--Navigation Bar Code Starts-->
     <header>
-      <div class="logo"><a href="index.html">Mini <span>Minds</span></a></div>
+      <div class="logo">
+        <a href="index.html">Mini
+           <span>Minds</span>
+          </a>
+        </div> 
       <nav>
-          <div id="menu-icon" class="menu-icon-1">&#9776;</div>
+          <div id="menu-icon" class="menu-icon-1">
+            &#9776;
+          </div>
           <ul id="menu-items" class="menu-items-1">
               <li>
                 <a href="about.html">About</a>
@@ -55,7 +61,10 @@
  <footer>
   <div class="footer-container-page">
       <div class="footer-brand contact">
-          <a>@Mini <span>Minds</span></a><br>
+          <a>@Mini 
+            <span>Minds</span>
+          </a>
+          <br>
           <img src="images/miniminds.png" alt="" height="180px">
           <div class="message">
             <h2>Message us</h2>
@@ -66,30 +75,72 @@
       <div class="footer-section" id="contact">
           <h2 class="heading">Contacts</h2>
           <div>
-              <p><strong>Address:</strong><br>AP, India</p>
-              <p><strong>Contact:</strong><br>0123456789</p>
+              <p>
+                <strong>Address:</strong>
+                <br>AP, India
+              </p>
+              <p>
+                <strong>Contact:</strong>
+                <br>0123456789
+              </p>
           </div>
       </div>
+      <!--Social links-->
       <div class=" footer-section social-links-div">
         <h2 class="heading">Social</h2>
         <ul class="quick-links">
-            <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
-            <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-            <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-            <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> FaceBook</a></li>
+          <li>
+            <a class="icon" href="https://www.youtube.com/" target="_blank">
+              <i class="fab fa-youtube"></i> YouTube
+            </a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.instagram.com/" target="_blank">
+              <i class="fab fa-instagram"></i> Instagram
+            </a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.linkedin.com/" target="_blank">
+              <i class="fab fa-linkedin"></i> LinkedIn
+            </a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.facebook.com/" target="_blank">
+              <i class="fab fa-facebook"></i> FaceBook
+            </a>
+          </li>
         </ul>
-    </div>
+     </div>
+     <!--Social links-->
+     <!--Quick links-->
     <div class="links-div">
       <div class="footer-section quick-links-div">
-          <h2 class="heading">Quick Links</h2>
-          <ul class="quick-links">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="courses.html">Courses</a></li>
-              <li><a href="stories.html">Stories</a></li>
-          </ul>
+        <h2 class="heading">Quick Links</h2>
+        <ul class="quick-links">
+          <li>
+            <a href="index.html">
+              Home
+            </a>
+          </li>
+          <li>
+            <a href="about.html">
+              About Us
+            </a>
+          </li>
+          <li>
+            <a href="coussrses.html">
+              Courses
+            </a>
+          </li>
+          <li>
+            <a href="stories.html">
+              Stories
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
+    <!--Quick links-->
   </div>
 </footer>
 <!--Contact Us section Ends-->
