--- a/stories.html
+++ b/stories.html
@@ -73,7 +73,8 @@
     <!--Games section Ends-->
     <!--Stories list section Starts-->
     <div id="course-list" class="courses story-list">
-      <h2 class="heading">Stories</h2><br>
+      <h2 class="heading">Stories</h2>
+      <br>
       <div class="div-course">
       <div class="box fade-in-up-target"><img class="fade-in-up-target" src="images/solar.png" alt=""></div>
       <div class="box fade-in-right-target"><img src="images/Coding.png" alt=""></div>
@@ -83,44 +84,82 @@
     </div>
     </div>
     <!--Stories list section Ends-->
- <!--Contact Us section starts-->
- <footer>
+<!--Contact Us section starts-->
+<footer>
+  <!--Contact section intro div-->
   <div class="footer-container">
-      <div class="footer-brand contact">
-          <a>Mini <span>Minds</span></a>
-          <p>Reach us out from contact section for any doubts</p>
-      </div>
-      <div class="footer-section" id="contact">
-          <h2 class="heading">Contacts</h2>
-          <div>
-              <p><strong>Address:</strong><br>AP, India</p>
-              <p><strong>Contact:</strong><br>0123456789</p>
-          </div>
-      </div>
-      <div class=" footer-section social-links-div">
-        <h2 class="heading">Social</h2>
-        <ul class="quick-links">
-            <li><a class="icon" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
-            <li><a class="icon" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-            <li><a class="icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-            <li><a class="icon" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> FaceBook</a></li>
-        </ul>
+    <div class="footer-brand contact">
+        <a>@Mini
+          <span>Minds</span>
+        </a>
+        <p>Reach us out from contact section for any doubts</p>
     </div>
+    <div class="footer-section" id="contact">
+        <h2 class="heading">Contacts</h2>
+        <div>
+            <p>
+              <strong>Address:</strong>
+              <br>AP, India
+            </p>
+            <p>
+              <strong>Contact:</strong>
+              <br>0123456789
+            </p>
+        </div>
+    </div>
+    <!--Contact section intro div-->
+    <!--Social links div starts-->
+    <div class=" footer-section social-links-div">
+      <h2 class="heading">Social</h2>
+      <ul class="quick-links">
+          <li>
+            <a class="icon" href="https://www.youtube.com/" target="_blank">
+              <i class="fab fa-youtube"></i> YouTube
+            </a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.instagram.com/" target="_blank">
+              <i class="fab fa-instagram"></i> Instagram
+            </a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.linkedin.com/" target="_blank">
+              <i class="fab fa-linkedin"></i> LinkedIn
+            </a>
+          </li>
+          <li>
+            <a class="icon" href="https://www.facebook.com/" target="_blank">
+              <i class="fab fa-facebook"></i> FaceBook
+            </a>
+          </li>
+      </ul>
+    </div>
+    <!--Social links div ends-->
+    <!--Quicks links div starts-->
     <div class="links-div">
       <div class="footer-section quick-links-div">
           <h2 class="heading">Quick Links</h2>
           <ul class="quick-links">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="courses.html">Courses</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li>
+                <a href="stories.html">Stories</a>
+              </li>
+              <li>
+                <a href="about.html">About Us</a>
+              </li>
+              <li>
+                <a href="courses.html">Courses</a>
+              </li>
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
           </ul>
       </div>
     </div>
+    <!--Quicks links div ends-->
   </div>
 </footer>
 <!--Contact Us section Ends-->
-<!--link to java script-->
+<!--linking javascript-->
 <script src="script.js"></script>
-<!--link to java script-->
+<!--linking javascript-->
 </body>
