--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <img class="tree-1" src="images/tree.png" alt="Tree" width="200px">
       <img class="stone-1" src="images/rock.png" alt="Stone" width="70px">
       <img class="stone-2" src="images/rock.png" alt="Stone" width="70px">
-      <img class="walk" src="images/walking.gif" alt="cartoon" height="160px">
-      <img class="walk-1" src="images/doggo-1.gif" alt="cartoon" height="60px">
+      <img class="walk" src="images/walking-1.gif" alt="cartoon" height="160px">
+      <img class="walk-1" src="images/doggo.gif" alt="cartoon" height="60px">
     </div>
     <!--Tree, stone, human resource end-->
     <!--About section Starts-->
