--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       <img class="stone-2" src="images/rock.png" alt="Stone" width="70px">
       <img class="walk" src="images/walking-1.gif" alt="cartoon" height="160px">
       <img class="walk-1" src="images/doggo.gif" alt="cartoon" height="60px">
+      <img class="thoughts" src="images/thought-cloud.png" alt="cartoon" height="80px">
     </div>
     <!--Tree, stone, human resource end-->
     <!--About section Starts-->
