--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
   <!--Home Page Starts-->
   <div id="hero" class="hero">
       <div id="hero-content" class="hero-content fadeInUp-animation">
-          <h2 class="hehe fadeInUp-animation">Where Learning is <span>made practical</span></h2>
+          <h2 class="hehe fadeInUp-animation">Where Learning is 
+            <span>made practical</span>
+          </h2>
           <ul class="icons ">
             <li>
                 <a class="icon" href="https://www.youtube.com/" target="_blank">
@@ -116,13 +118,14 @@
       <img class="stone-2" src="images/rock.png" alt="Stone" width="70px">
       <img class="walk" src="images/walking-1.gif" alt="cartoon" height="160px">
       <img class="walk-1" src="images/doggo.gif" alt="cartoon" height="60px">
-      <img class="thoughts" src="images/thought-cloud.png" alt="cartoon" height="80px">
+      <img class="thoughts" src="images/night-cloud.png" alt="cartoon" height="80px">
+      <img class="thoughts-day" src="images/cloud-sun.png" alt="cartoon" height="80px">
     </div>
     <!--Tree, stone, human resource end-->
     <!--About section Starts-->
     <div id="about" class="about">
         <h2 class="heading">Why Us?</h2>
-        <img class="fade-in-right-target" src="images/about.png" alt="cartoon">
+        <img class="fade-in-right-target ani-img" src="images/about.png" alt="cartoon">
         <div class="space fade-in-left-target">
           <p>Welcome to Mini Minds! Our mission is to help children enrich their school basics while having tons of fun. At Mini Minds, we believe learning should be practical and enjoyable, which is why we've created a special place just for kids aged 5 to 12. Our site is packed with cool games, exciting activities, and interesting stories designed to make learning fun. Our logo represents our commitment to making education both practical and entertaining.</p><br><br>
           <a class="button-about" href="about.html">Know More</a>
@@ -132,7 +135,7 @@
     <!--Courses section Starts-->
     <div id="courses" class="courses space">
         <h2 class="heading">What do we do?</h2>
-        <img class="fade-in-right-target" src="images/our courses.png" alt="cartoon">
+        <img class="fade-in-right-target ani-img" src="images/our courses.png" alt="cartoon">
         <div class="space fade-in-left-target">
           <p>Interactive Stories: We provide engaging stories help improve reading skills and ignite a imagination skills. According to Science, reading Sci-fi stories can improve your Analytical and Imagination skills. Each story is crafted to be entertaining and educational. Practical Learning: We believe in making education practical. Our content helps kids connect what they learn with real-world experiences, making learning meaningful. At Mini Minds, we are dedicated to creating a space where kids can learn, play, and grow</p><br><br>
           <a class="button-courses" onclick="window.dialog.showModal();">Explore Stories</a>
@@ -147,7 +150,8 @@
     <!--Games section Starts-->
     <div class="games" id="games">
       <h2 class="heading">Our Edu-Games</h2>
-      <img class="fade-in-right-target" src="images/games.png" alt="cartoon"><br>
+      <img class="fade-in-right-target ani-img" src="images/games.png" alt="cartoon">
+      <br>
       <div class="space fade-in-left-target">
         <p>Our edu-games have levels, a new game unlocks on every level up ( course completion ) and games are fun and educational at the same time. Get ready for an awesome learning adventure! turn numbers into number magic, letters into language fun, and science into super cool discoveries. You'll explore, you'll laugh, and before you know it, you'll be a learning superstar! Dive into a world of fun where learning is an adventure. <strong>Note:</strong> Games are yet to be developed, if you still wanna explore our ideas about the game check them out by clicking on the button below!</p><br><br>
         <a class="button-games" href="courses.html">Coming soon!!</a>
