--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
           </ul><br>
           <button id="submit" class="sign-in" onclick="signUp()">Sign Up</button>
           <p>no account? 
-            <a href="#" onclick="signIn()">Sign In</a>
+            <a href="#" onclick="signIn()">
+              Sign In
+            </a>
           </p>
       </div>
       <!--Cloud resource-->
@@ -187,7 +189,9 @@
     <div class="footer-container">
       <div class="footer-brand contact">
           <a>@Mini
-            <span>Minds</span>
+            <span>
+              Minds
+            </span>
           </a>
           <p>Reach us out from contact section for any doubts</p>
       </div>
